--- a/resources/index.html
+++ b/resources/index.html
@@ -27,10 +27,10 @@
         </div>
     </header>
 
-    <div class="row">
+    <div class="row media-row">
         <div class="col-12">
             <div class="card">
-                <p>This is what the navigation menu looks like when the screen is at 768px or higher. When the screen is
+                <p class="media-text">This is what the navigation menu looks like when the screen is at 768px or higher. When the screen is
                     less
                     than 768px,
                     the menu will be displayed vertically.</p>
